# oort-ai

./: .gitignore  Cargo.toml  TODO.txt  build.rs  out.rs
docs/: contact.drawio  manouver.drawio  target-tracking.drawio
docs/notes/: 2d-intercept.drawio  heading.drawio  motion.drawio  radar-arch.drawio  radar-math.drawio
src/: bundle_input.rs  control.rs  draw.rs  lib.rs  scenario.rs
src/math/: firing_solution.rs  intercept.rs  kinematics.rs  mod.rs  polynomial.rs
src/math/geometry/: circle.rs  ellipse.rs  line.rs  mod.rs  point.rs  polygon.rs  shape.rs  vector.rs
src/radar/: common.rs  composite.rs  emitter.rs  manager.rs  mod.rs  search.rs  track.rs
src/radar/board/: interface.rs  mod.rs  unique.rs
src/radar/contacts/: board.rs  contact.rs  error.rs  interface.rs  mod.rs  search.rs  track.rs
src/radar/control/: interface.rs  mod.rs  search.rs  tracking.rs
src/radio/: message.rs  mod.rs  ship_radio.rs
src/ship/: class.rs  mod.rs
src/ship/experimental/: contact_draw.rs  mod.rs  radar_test.rs
src/ship/fighter/: default.rs  dualist.rs  duelist.rs  mod.rs
src/ship/missile/: default.rs  mod.rs
src/ship/stats/: acceleration.rs  dimensions.rs  mod.rs
