[package]
name = "oort-ai"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oort_api = "0.78.2"

[build-dependencies]
rustsourcebundler = "0.11.3"

[dev-dependencies]
rstest = "0.18.2"
